# fastvla

./: README.md  TODO
media/docs/policies/pi05/: torch_performance.md
python/: pyproject.toml
python/fastvla/configs/: default.py  eval.py  parser.py  policies.py  train.py
python/fastvla/datasets/: aggregate.py  compute_stats.py  lerobot_dataset.py  utils.py  video_utils.py
python/fastvla/envs/: configs.py  factory.py  libero.py  utils.py
python/fastvla/policies/: __init__.py  pretrained.py  utils.py
python/fastvla/policies/pi05/: __init__.py  config.py  configuration_pi05.py  gemma_pi05.py  model_loader.py  modeling_pi05.py  preprocessing.py  processor_pi05.py
python/fastvla/policies/pi05/paligemma/: modeling_paligemma.py
python/fastvla/policies/pi05/siglip/: __init__.py  configuration_siglip.py  image_processing_siglip.py  image_processing_siglip_fast.py  modeling_siglip.py  processing_siglip.py  tokenization_siglip.py
python/fastvla/policies/pi05_pure/: config.py  gemma.py  modeling_pi05.py  preprocessing.py
python/fastvla/policies/pi05_pure/gemma/: __init__.py  modeling_gemma.py
python/fastvla/processor/: __init__.py  batch_processor.py  converters.py  delta_action_processor.py  device_processor.py  gym_action_processor.py  hil_processor.py  joint_observations_processor.py  migrate_policy_normalization.py  normalize_processor.py  observation_processor.py  pipeline.py  policy_robot_bridge.py  rename_processor.py  tokenizer_processor.py
python/fastvla/utils/: control_utils.py  logging_utils.py  random_utils.py  train_utils.py  transition.py  utils.py
test/python/kernels/: test_torch_compile.py
test/python/policies/: test_pi05.py  test_pi05_original_vs_fastvla.py
(+3 files in other folders)
