[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.9",
]
build-backend = "setuptools.build_meta"

[project]
name = "fastvla"
version = "0.0.1"
description = "A high-performance inference framework for Vision Large Action models."
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Rhys-Q", email = "1826249828@qq.com" }
]
requires-python = ">=3.10"

dependencies = [
    "torch>=2.9",
    "torchvision",
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi",
    "draccus",
    "einops",
    "datasets",
    "pytest",
    "sentencepiece",
]

[project.urls]
Homepage = "https://github.com/Rhys-Q/fastvla"
Source = "https://github.com/Rhys-Q/fastvla"
Issues = "https://github.com/Rhys-Q/fastvla/issues"


[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[[tool.uv.index]]
url = "https://nexus.infra.agibot.com/repository/pypi-proxy/simple"
default = true
